java8 changes (#117)
* java8 changes
* using Collections.simpletonMap instead