@@ -25,6 +25,7 @@ import static com.github.tomakehurst.wiremock.client.WireMock.*;
 import com.github.tomakehurst.wiremock.WireMockServer;
 import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
 
+import java.util.Collections;
 import java.util.Map;
 
 class RDF4JMockHttpService {
@@ -92,7 +93,7 @@ class RDF4JMockHttpService {
 
         setupMocks();
 
-        return Map.of("rdf4j_uri", wireMockServer.baseUrl());
+        return Collections.singletonMap("rdf4j_uri", wireMockServer.baseUrl());
     }
 
     public void stop() {
